Fix collapsed sidebar on wide screens

--- a/src/components/ChatMessages.styl
+++ b/src/components/ChatMessages.styl
@@ -53,7 +53,6 @@
       outline none
 
 .mainbar
-  max-width 1200px
   flex 3
   min-width 0
   height 100%
